; ModuleID = '/home/carl/AnghaBench/mpv/video/out/extr_filter_kernels.c_blackman.c'
source_filename = "/home/carl/AnghaBench/mpv/video/out/extr_filter_kernels.c_blackman.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { double* }

@M_PI = common dso_local global double 0.000000e+00, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (double (%struct.TYPE_3__*, double)* @blackman to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal double @blackman(%struct.TYPE_3__* %0, double %1) #0 {
  %3 = alloca %struct.TYPE_3__*, align 8
  %4 = alloca double, align 8
  %5 = alloca double, align 8
  %6 = alloca double, align 8
  %7 = alloca double, align 8
  %8 = alloca double, align 8
  %9 = alloca double, align 8
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %3, align 8
  store double %1, double* %4, align 8
  %10 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %11 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %10, i32 0, i32 0
  %12 = load double*, double** %11, align 8
  %13 = getelementptr inbounds double, double* %12, i64 0
  %14 = load double, double* %13, align 8
  store double %14, double* %5, align 8
  %15 = load double, double* %5, align 8
  %16 = fsub double 1.000000e+00, %15
  %17 = fdiv double %16, 2.000000e+00
  store double %17, double* %6, align 8
  store double 5.000000e-01, double* %7, align 8
  %18 = load double, double* %5, align 8
  %19 = fdiv double %18, 2.000000e+00
  store double %19, double* %8, align 8
  %20 = load double, double* @M_PI, align 8
  %21 = load double, double* %4, align 8
  %22 = fmul double %20, %21
  store double %22, double* %9, align 8
  %23 = load double, double* %6, align 8
  %24 = load double, double* %7, align 8
  %25 = load double, double* %9, align 8
  %26 = fptosi double %25 to i32
  %27 = call double @cos(i32 %26)
  %28 = fmul double %24, %27
  %29 = fadd double %23, %28
  %30 = load double, double* %8, align 8
  %31 = load double, double* %9, align 8
  %32 = fmul double 2.000000e+00, %31
  %33 = fptosi double %32 to i32
  %34 = call double @cos(i32 %33)
  %35 = fmul double %30, %34
  %36 = fadd double %29, %35
  ret double %36
}

declare dso_local double @cos(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
